--- a/Three/Views/Shared/_Layout.cshtml
+++ b/Three/Views/Shared/_Layout.cshtml
@@ -6,8 +6,18 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div>
-        @RenderBody()
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2">
+                <img asp-append-version="true" alt="Logo" src="~/images/logo.jpg" style="height:60px"/>
+            </div>
+            <div class="h2">@ViewBag.Title</div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                @RenderBody()
+            </div>
+        </div>
     </div>
 </body>
 </html>
