--- a/BookListR/Pages/BookList/Index.cshtml
+++ b/BookListR/Pages/BookList/Index.cshtml
@@ -4,4 +4,33 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<br />
+<div class="container row p-0 m-0">
+    <div class="col-9">
+        <h2 class="text-info">Book List</h2>
+    </div>
+    <div class="col-3">
+        <a class="btn btn-info form-control text-white">Create New Book</a>
+    </div>
+    <div class="col-12 border p-3 mt-3">
+        <form method="post">
+            @if(Model.Books.Count()>0)
+            {
+                <table class="table table-striped border">
+                    <tr class="table-secondary">
+                        <th>
+                            <label asp-for="Books.FirstOrDefault().Name"></label>
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(m=>m.Books.FirstOrDefault().Author)
+                        </th>
+                    </tr>
+                </table>
+            }
+            else
+            {
+                <p>No Books available</p>
+            }
+        </form>
+    </div>
+</div>
