--- a/BookListR/Pages/BookList/Edit.cshtml
+++ b/BookListR/Pages/BookList/Edit.cshtml
@@ -1,15 +1,13 @@
 ﻿@page
-@model BookListR.Pages.BookList.CreateModel
-@{
-}
+@model BookListR.Pages.BookList.EditModel
 
 <br />
-<h2 class="text-info">Create New Book</h2>
+<h2 class="text-info">Edit New Book</h2>
 <br />
 
 <div class="border container" style="padding:30px;">
     <form method="post">
-
+        <input type="hidden" asp-for="Book.Id"/>
         <div class="form-group row">
             <div class="col-3">
                 <label asp-for="Book.Name"></label>
@@ -44,7 +42,7 @@
 
         <div class="form-group row">
             <div class="col-3 offset-3">
-                <input type="submit" value="Create" class="btn btn-primary form-control" />
+                <input type="submit" value="Update" class="btn btn-primary form-control" />
             </div>
             <div class="col-3">
                 <a asp-page="Index" class="btn btn-success form-control">Back toList</a>
@@ -52,6 +50,6 @@
         </div>
     </form>
 </div>
-@section Scripts{ 
+@section Scripts{
     <partial name="_ValidationScriptsPartial" />
 }
